syntax = "proto3";
package smartdev0328.bluechip.pageinflation;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "pageinflation/params.proto";
import "pageinflation/mint_denom.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/smartdev0328/bluechip/x/pageinflation/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/smartdev0328/bluechip/pageinflation/params";
  }
  // Queries a MintDenom by index.
	rpc MintDenom(QueryGetMintDenomRequest) returns (QueryGetMintDenomResponse) {
		option (google.api.http).get = "/smartdev0328/bluechip/pageinflation/mint_denom";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetMintDenomRequest {}

message QueryGetMintDenomResponse {
	MintDenom MintDenom = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
